# ke-cmake-sample-apps

./: CMakeLists.txt  README.md  g_config.h.in  hello_world.c
calculator/: CMakeLists.txt  f0.c  f0.h  f1.c  f1.h
